--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,6 +22,13 @@ jobs:
     permissions:
       contents: read
       packages: write
+    strategy:
+      matrix:
+        version: [
+            { fish: 3.3.1, alpine: 3.15 }, # for Ubuntu 22.04 LTS
+            { fish: 3.7.1, alpine: 3.21 },
+            { fish: 4.0.2, alpine: "edge" }
+        ]
 
     steps:
       - name: Checkout repository
@@ -39,7 +46,7 @@ jobs:
       - name: Extract metadata
         id: meta
         run: |
-          FISH_VERSION="${{ github.event.inputs.fish_version || '4.0.2' }}"
+          FISH_VERSION="${{ matrix.version.fish || '4.0.2' }}"
           echo "fish_version=${FISH_VERSION}" >> $GITHUB_OUTPUT
           echo "tag=fish-${FISH_VERSION}" >> $GITHUB_OUTPUT
 
