--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -28,7 +28,7 @@ jobs:
         version: [
             { fish: 3.3.1, alpine: 3.15 }, # for Ubuntu 22.04 LTS
             { fish: 3.7.1, alpine: 3.21 },
-            { fish: 4.0.2, alpine: "edge" }
+            { fish: 4.0.2, alpine: 3.22 },
         ]
 
     steps:
