--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -56,7 +56,7 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: |
-            ${{ env.IMAGE_NAME }}:${{ steps.meta.outputs.tag }}
+            ${{ env.IMAGE_NAME }}:fish-${{ steps.meta.outputs.tag }}
             ${{ env.IMAGE_NAME }}:latest
           build-args: |
             FISH_VERSION=${{ steps.meta.outputs.fish_version }}
@@ -65,4 +65,4 @@ jobs:
 
       - name: Test image
         run: |
-          make test IMAGE_NAME=${{ env.IMAGE_NAME }} TAG=${{ matrix.version.fish }}
+          make test IMAGE_NAME=${{ env.IMAGE_NAME }} TAG=fish-${{ matrix.version.fish }}
